[package]
name = "vhdrs"
version = "0.1.4"
authors = ["Samuel Van der Stappen <shogun_einst.0i@icloud.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"
repository = "https://github.com/samvdst/vhdrs"
documentation = "https://docs.rs/vhdrs"
categories = ["os::windows-apis", "filesystem"]
keywords = ["vhd", "vhdx", "mount", "disk", "windows"]
description = """
A lightweight library that provides an ergonomic interface for managing Virtual Hard Disks (VHD/VHDX) on Windows systems. It leverages the Windows API to facilitate operations such as opening, attaching, detaching, and retrieving information from VHD files.
"""

[dependencies]
windows-sys = { version = "0.59", features = [
  "Win32",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage",
  "Win32_Storage_FileSystem",
  "Win32_Storage_Vhd",
  "Win32_System",
  "Win32_System_IO",
] }
thiserror = "1"
uuid = "1"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
